<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VisitProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarVisitProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary" >
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarVisitProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:id="@+id/profile_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:text="Detail Informasi User"
                android:textSize="19sp"
                android:typeface="serif" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/namaVisitProfile"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/namaView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"

                    android:text="@string/nama"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="115dp"
                    android:layout_marginTop="60dp"
                    android:text=":"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/namaTeamView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textStyle="bold"
                    android:text="@string/teamVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/teamView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/team"
                    android:textSize="18sp"
                    android:typeface="serif" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/daftar_anggota_team"
                android:textSize="19sp"
                android:typeface="serif" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anggota1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/anggota1View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:text="@string/anggotaVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/anggota2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/anggota2View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/anggotaVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:text="@string/anggota4"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/anggota4View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/anggotaVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:text="@string/anggota5"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/anggota5View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="160dp"
                    android:text="@string/anggotaVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:textStyle="bold"
                    android:text="@string/anggota6"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/anggota6View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/anggotaVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/anggota3"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/anggota3View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="126dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/anggotaVisitProfile"
                    android:textSize="18sp"
                    android:typeface="serif" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    </FrameLayout>
</RelativeLayout>
