<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:layout_margin="5dp"
    android:elevation="90dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/ic_face_black"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:text="@string/nama"/>

        <TextView
            android:id="@+id/user_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:textSize="19sp"
            android:layout_marginTop="40dp"
            android:text="@string/nama_team_futsal"/>

        <TextView
            android:id="@+id/user_usia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:textSize="19sp"
            android:layout_marginTop="70dp"
            android:text="@string/_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:textSize="19sp"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="27dp"
            android:text="Tahun"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>